Changed h1 font size to 5.5vw in max-width 640px to prevent my very long name from being cut off on small cell phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,7 @@ input, textarea {
     }
 
     h1 {
-        font-size: 26px;
+        font-size: 5.5vw;
     }
 
     .right-link, p {
